@startuml
class screens.ContactActivity {
- {static} int LONG_PRESS_DURATION
- Handler handler
- Runnable longPressedRunnable
# void onCreate(Bundle)
- void setupSecretNavigation(View)
- void setupSocialButton(int,String)
# void onPause()
}


class screens.DetailsAboutUserActivity {
# ImageUtil imageUtil
# CalendarUtil calendarUtil
- TextView txtTitle
- ImageView imgUserProfile
- User user
- ActivityResultLauncher<PickVisualMediaRequest> photoPickerLauncher
- ActivityResultLauncher<Void> cameraLauncher
# void onCreate(Bundle)
- void setupLaunchers()
# void onPermissionsResult(Map<String,Boolean>)
# void onResume()
- void loadUserFromDatabase()
- void loadUserDetailsToUI()
- void openEditDialog()
- void launchGallery()
- void openImagePicker()
- void deleteProfileImage()
- void handleImageBitmap(Bitmap)
- void saveProfileImage()
}


class screens.AiActivity {
- {static} String PREF_AI_QUESTION
- {static} String PREF_AI_ANSWER
- {static} String PREF_AI_SPEAK_VISIBILITY
- ChatFutures chatSession
- Button btnSend
- ProgressBar progressBar
- EditText questionInput
- TextView answerView
- Handler animationHandler
- int charIndex
- String currentFullResponse
- TextToSpeech tts
- boolean isSpeaking
# void onCreate(Bundle)
# void onSaveInstanceState(Bundle)
- void toggleSpeech()
- void updateSpeakButton(boolean)
- void sendQuestion()
- void displayTextWithAnimation(String)
# void onPause()
+ void onDestroy()
}


class screens.AdminPageActivity {
# void onCreate(Bundle)
# void onResume()
}



bases.BaseActivity <|-- screens.ContactActivity
bases.BaseActivity <|-- screens.DetailsAboutUserActivity
bases.BaseActivity <|-- screens.AiActivity
bases.BaseActivity <|-- screens.AdminPageActivity
@enduml